a bit of an expination for the name of the project

--- a/README
+++ b/README
@@ -18,3 +18,6 @@ pentester/red teamer/ or firm's toolkit
 
 ::crossed fingers::
 
+Also, I picked the name based on where Jack the Ripper
+was performing his murders... seems a bit dark now
+that I think about it, but oh well...
